--- a/blog/templates/blogs/allblogs.html
+++ b/blog/templates/blogs/allblogs.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.5">
-    <title>Suyog Sarda</title>
+    <title>Suyog's Blog</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -43,43 +43,32 @@
         <div class="navbar-nav ml-auto">
           <a class="nav-item nav-link" href="http://linkedin.com/in/suyog-sarda-4ba6a8165">LinkedIn</a>
           <a class="nav-item nav-link" href="{% static 'Suyog Sarda IIT Bombay.pdf' %}">Resume</a>
-          <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
+          <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Blog</a>
         </div>
       </div>
     </nav>
 </header>
 
 <main role="main">
+  <div class="container">
 
-  <section class="jumbotron text-center">
-    <div class="container">
-      <h1 class="jumbotron-heading">Hi, I'm Suyog.</h1>
-      <p class="lead text-muted">An Engineer from IIT Bombay (Electrical) with proficiency in programming, scripting and software development. Ability to persevere and deliver results is my key strength. Capability of getting acquainted with the additional skills via self learning is what sets me apart.</p>
-      <p>
-        <a href="mailto:suyog.sarda@gmail.com" class="btn btn-primary my-2">Email me</a>
-      </p>
-      <img class="img-fluid"src="{% static 'cropped.jpg' %}" heigth=400 width=400/>
-    </div>
-  </section>
+  <h1 class="text-center pt-3">Welcome to Suyog's Blog</h1>
+  <br/>
+  <br/>
+  <h2>Latest Posts</h2>
+  <hr/>
 
-  <div class="album py-5 bg-light">
-    <div class="container">
+{% for blog in blogs.all %}
 
-      <div class="row">
+<a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
+{{ blog.pub_date_pretty }}
+<br/>
+<img class="img-fluid" src="{{ blog.image.url }}" height=200 width=200 />
+<br/>
+<p>{{ blog.summary }}</p>
 
-        {% for job in jobs.all %}
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="card-img-top" src="{{ job.image.url }}" />
-            <div class="card-body">
-              <p class="card-text">{{ job.summary }}</p>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
+{% endfor %}
 
-      </div>
-    </div>
   </div>
 
 </main>
